force-app/main/default/objects/CondicaoPagamento__c/fields/AdicionalComissao__c.field-meta.xml
<CustomField>
    <fullName>AdicionalComissao__c</fullName>
    <label>Adicional de Comissão</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>