force-app/main/default/objects/CondicaoPagamento__c/fields/CodigoCondicaoPagamento__c.field-meta.xml
<CustomField>
    <fullName>CodigoCondicaoPagamento__c</fullName>
    <externalId>true</externalId>
    <label>Código da Condição de Pagamento</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>