force-app/main/default/objects/CondicaoPagamento__c/fields/FormaPagamentoId__c.field-meta.xml
<CustomField>
    <fullName>FormaPagamentoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forma de Pagamento</label>
    <referenceTo>FormaPagamento__c</referenceTo>
    <relationshipLabel>Condições de Pagamento</relationshipLabel>
    <relationshipName>CondicoesPagamento</relationshipName>
    <type>Lookup</type>
</CustomField>