force-app/main/default/objects/CondicaoPagamento__c/fields/IndiceFinanceiroCondicao__c.field-meta.xml
<CustomField>
    <fullName>IndiceFinanceiroCondicao__c</fullName>
    <label>Índice Financeiro para Condição</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>