force-app/main/default/objects/CondicaoPagamento__c/fields/PrazoMedio__c.field-meta.xml
<CustomField>
    <fullName>PrazoMedio__c</fullName>
    <label>Prazo Médio</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>