force-app/main/default/objects/CondicaoPagamento__c/fields/ValorMinimo__c.field-meta.xml
<CustomField>
    <fullName>ValorMinimo__c</fullName>
    <label>Valor Mínimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>