force-app/main/default/objects/CondicaoPagamento__c/fields/ValorMinimoParcela__c.field-meta.xml
<CustomField>
    <fullName>ValorMinimoParcela__c</fullName>
    <label>Valor Mínimo da Parcela</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>